--- a/Week 4/The Battle of Neighborhoods - Business Proposal - Introduction.ipynb
+++ b/Week 4/The Battle of Neighborhoods - Business Proposal - Introduction.ipynb
@@ -58,8 +58,30 @@
    "metadata": {},
    "source": [
     "## Libraries Which are Used to Develope the Project:\n",
-    "\n"
+    "\n",
+    "* Pandas: For creating and manipulating dataframes.\n",
+    "\n",
+    "* Folium: Python visualization library would be used to visualize the neighborhoods cluster distribution of using interactive leaflet map.\n",
+    "\n",
+    "* Scikit Learn: For importing k-means clustering.\n",
+    "\n",
+    "* JSON: Library to handle JSON files.\n",
+    "\n",
+    "* XML: To separate data from presentation and XML stores data in plain text format.\n",
+    "\n",
+    "* Geocoder: To retrieve Location Data.\n",
+    "\n",
+    "* Beautiful Soup and Requests: To scrap and library to handle http requests.\n",
+    "\n",
+    "* Matplotlib: Python Plotting Module."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
